--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">¡Chancho Va!</string>
+    <string name="app_name">Anotador de Chancho va</string>
 
     <string name="title_activity_fullscreen">FullscreenActivity</string>
     <string name="dummy_button">Dummy Button</string>
@@ -16,4 +16,8 @@
     <string name="tutorial01">Bienvenido a un anotador de chancho va, comencemos con el tutorial</string>
     <string name="tutorial02">Para comenzar tenes que tener amigos, despues agregarlos de a uno y pulsa en \"Agregar\"</string>
     <string name="tutorial03">Cuando todos esten en la lista, preciona aqui para comenzar la partida</string>
+    <string name="menuItem1">Iniciar Tutorial</string>
+    <string name="menuItem01">Iniciar tutorial</string>
+    <string name="MenuItem02">Como se juega</string>
+    <string name="MenuItem03">Acerca de nosotros</string>
 </resources>
